api documenttation and product management done
